--- a/src/containers/app/app.css
+++ b/src/containers/app/app.css
@@ -7,5 +7,5 @@
     padding: 15px;
     position: absolute;
     bottom: 0;
-    box-shadow: -2px 0 4px rgba(0,0,0,0.4)
+    box-shadow: -2px 0 4px rgba(0, 0, 0, 0.4)
 }
