Delete button on tasks

--- a/src/containers/current-tasks/task-list.css
+++ b/src/containers/current-tasks/task-list.css
@@ -46,6 +46,10 @@
     flex-shrink: 0;
 }
 
+.task-list-item-buttons .btn {
+    margin-left: 5px;
+}
+
 .add-new-task-text {
     line-height: 34px;
 }
