--- a/src/screens/current-tasks/task-list.css
+++ b/src/screens/current-tasks/task-list.css
@@ -25,8 +25,12 @@
 
 .task-list-item-main {
     width: 100%;
-    margin-right: 10px;
+    padding-right: 10px;
     overflow-x: hidden;
+}
+
+.task-list-item-project {
+    padding: 9px 10px 0 10px
 }
 
 .task-list-description {
@@ -38,7 +42,7 @@
 }
 
 .task-list-item-badges {
-    margin-right: 10px;
+    padding-right: 10px;
     flex-shrink: 0;
 }
 
